- table horizontal scrolling layout fix - sorting by hours fix

--- a/src/main/webapp/style-app.css
+++ b/src/main/webapp/style-app.css
@@ -132,6 +132,10 @@ span.md-calendar-date-selection-indicator {
     color:white;
 }
 
+#table-timesheet {
+    overflow: auto;
+}
+
 #loginForm {
     padding-top: 40px;
     padding-left: 40%;
